--- a/css/style.css
+++ b/css/style.css
@@ -335,12 +335,25 @@ opacity: 0.43;
   background-size: cover;
   font-size: 1.32vw;
   margin-bottom: 7.5vh;
+  position: relative;
+}
+#gift .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(47, 80, 112, .5);
+  left: 0;
+  top: 0;
 }
 #gift .wraper {
   margin-bottom: 100px;
 }
 #gift .right {
   margin-top: 3vh;
+  z-index: 5;
+}
+#gift .left {
+  z-index: 5;
 }
 #gift .left h2 {
   text-transform: uppercase;
